[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code"
authors = ["Florian Feiler <f.feiler@fz-juelich.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
numpy = "^1.26.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
